---
source: indexes.sqltest
expression: |-
  SELECT warehouse_id, SUM(quantity) as total_qty
      FROM inventory
      WHERE warehouse_id = 1
      GROUP BY warehouse_id;
info:
  statement_type: SELECT
  tables:
  - inventory
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH inventory USING INDEX idx_inventory_covering

BYTECODE
addr  opcode             p1  p2  p3  p4            p5  comment
   0          Init        0  37   0                 0  Start at 37
   1          Null        0   8   0                 0  r[8]=NULL
   2          Integer     0   5   0                 0  r[5]=0; clear group by abort flag
   3          Null        0   6   0                 0  r[6]=NULL; initialize group by comparison registers to NULL
   4          Gosub      12  33   0                 0  ; go to clear accumulator subroutine
   5          OpenRead    0  10   0  k(4,B,B,B)     0  index=idx_inventory_covering, root=10, iDb=0
   6          Integer     1  13   0                 0  r[13]=1
   7          SeekGE      0  22  13                 0  key=[13..13]
   8            IdxGT     0  22  13                 0  key=[13..13]
   9            Column    0   0  10                 0  r[10]=idx_inventory_covering.warehouse_id
  10            Column    0   2  11                 0  r[11]=idx_inventory_covering.quantity
  11            Compare   6  10   1  k(1, Binary)   0  r[6..6]==r[10..10]
  12            Jump     13  17  13                 0  ; start new group if comparison is not equal
  13            Gosub     3  26   0                 0  ; check if ended group had data, and output if so
  14            Move     10   6   1                 0  r[6..6]=r[10..10]
  15            IfPos     5  36   0                 0  r[5]>0 -> r[5]-=0, goto 36; check abort flag
  16            Gosub    12  33   0                 0  ; goto clear accumulator subroutine
  17            AggStep   0  11   8  sum            0  accum=r[8] step(r[11])
  18            If        4  20   0                 0  if r[4] goto 20; don't emit group columns if continuing existing group
  19            Column    0   0   7                 0  r[7]=idx_inventory_covering.warehouse_id
  20            Integer   1   4   0                 0  r[4]=1; indicate data in accumulator
  21          Next        0   8   0                 0
  22          Gosub       3  26   0                 0  ; emit row for final group
  23          Goto        0  36   0                 0  ; group by finished
  24          Integer     1   5   0                 0  r[5]=1
  25        Return        3   0   0                 0
  26        IfPos         4  28   0                 0  r[4]>0 -> r[4]-=0, goto 28; output group by row subroutine start
  27      Return          3   0   0                 0
  28      AggFinal        0   8   0  sum            0  accum=r[8]
  29      Copy            7   1   0                 0  r[1]=r[7]
  30      Copy            8   2   0                 0  r[2]=r[8]
  31      ResultRow       1   2   0                 0  output=r[1..2]
  32    Return            3   0   0                 0
  33    Null              0   7   8                 0  r[7..8]=NULL; clear accumulator subroutine start
  34    Integer           0   4   0                 0  r[4]=0
  35  Return             12   0   0                 0
  36  Halt                0   0   0                 0
  37  Transaction         0   1  14                 0  iDb=0 tx_mode=Read
  38  Goto                0   1   0                 0
